# django-ai-features

./: README.md  main.py  pyproject.toml
advice/: admin.py  models.py  schemas.py  urls.py  views.py
advice/migrations/: 0001_initial.py
advice/templates/advice/: all_advice.html  health_advice.html
core/: settings.py  urls.py
doctor/: models.py  urls.py  views.py
doctor/migrations/: 0001_initial.py
doctor/templates/doctor/: index.html
